--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,7 @@ h6 {
   z-index: 997;
   padding: 15px 0;
   box-shadow: 0px 0 18px rgba(55, 66, 59, 0.08);
+  padding: 1.5rem 0; /* Use rem ou em em vez de pixels */
 }
 
 #header .logo {
@@ -133,6 +134,7 @@ h6 {
   letter-spacing: 1px;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
+  font-size: 2.5vw; /* Use vw (viewport width) para dimensionar o texto de acordo com a largura da tela */
 }
 
 #header .logo a {
@@ -145,6 +147,12 @@ h6 {
 
 #header .logo img {
   max-height: 70px;
+}
+
+@media (max-width: 768px) {
+  #header .logo {
+    font-size: 24px;
+  }
 }
 
 /**
