--- a/style.css
+++ b/style.css
@@ -133,18 +133,31 @@ h6 {
   letter-spacing: 1px;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-}
-
-#header .logo a {
-  color: #1888b4;
-}
-
-#header .logo a {
-  color: #1888b4;
-}
-
-#header .logo img {
   max-height: 70px;
+  max-width: 100%; /* Garante que a largura da imagem não exceda a largura do contêiner pai */
+  height: auto; /* Ajusta automaticamente a altura para manter a proporção */
+}
+
+#header .logo a {
+  color: #1888b4;
+}
+
+#header .logo a {
+  color: #1888b4;
+}
+
+/* Estilos para a imagem do logotipo no cabeçalho */
+#header .logo img {
+  max-height: 70px; /* Define a altura máxima da imagem */
+  max-width: 100%; /* Garante que a largura da imagem não exceda a largura do contêiner pai */
+  height: auto; /* Ajusta automaticamente a altura para manter a proporção */
+}
+
+/* Media Query para telas menores que 768px */
+@media (max-width: 768px) {
+  #header .logo img {
+    max-height: 50px; /* Reduza a altura da imagem para telas menores */
+  }
 }
 
 /**
@@ -513,6 +526,7 @@ h6 {
   margin-left: auto;
   margin-right: auto;
   display: block; 
+
 
 }
 
