--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,12 @@ h6 {
   box-shadow: 0px 0 18px rgba(55, 66, 59, 0.08);
 }
 
+#header .logo img {
+  max-height: 50px; /* Altura máxima da imagem ajustada */
+  width: auto; /* Largura ajustada automaticamente para manter a proporção */
+}
+
+
 #header .logo {
   font-size: 30px;
   margin: 0;
