--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -884,7 +884,11 @@ section {
 }
 
 
-
+ .container-centralized {
+      margin: 0 auto;
+      max-width: 1200px;
+      padding: 0 15px;
+    }
 
 
 
